# fusy

./: iris.html  iris.ipynb  pyproject.toml  titanic.html  titanic.ipynb
