[tool.poetry]
name = "fusy"
version = "0.1.0"
description = ""
authors = ["Jan Słowik <jas.slowik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
pandas-profiling = "^3.1.0"
jupyter = "^1.0.0"
pyfuzzylite = "^7.0b3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
sweetviz = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
